--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
 spring.application.name=sb-ecom
 
-spring.h2.console.enabled = true
-spring.datasource.url = jdbc:h2:mem:test
+#for postgresql
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+#spring.datasource.username=postgres
+#spring.datasource.password=Future@prediction
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#for mySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.username=root
+spring.datasource.password=Future@prediction
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#for h2
+#spring.h2.console.enabled = true
+#spring.datasource.url = jdbc:h2:mem:test
 
 project.image = images/
 
@@ -12,7 +27,7 @@ spring.app.jwtSecret = mySecretKey123912738aopsgjnspkmndfsopkvajoirjg94gf2opfng2
 spring.app.jwtExpirationMs = 3000000
 spring.ecom.app.jwtCookieName = springBootEcom
 
-logging.level.org.springframework = DEBUG
-logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.springframework.security = DEBUG
-logging.level.com.ecommerce.anshul = DEBUG
+#logging.level.org.springframework = DEBUG
+#logging.level.org.hibernate.SQL = DEBUG
+#logging.level.org.springframework.security = DEBUG
+#logging.level.com.ecommerce.anshul = DEBUG
