--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.application.name=sb-ecom
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
 spring.datasource.password=Future@prediction
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #for h2
@@ -31,3 +31,6 @@ spring.ecom.app.jwtCookieName = springBootEcom
 #logging.level.org.hibernate.SQL = DEBUG
 #logging.level.org.springframework.security = DEBUG
 #logging.level.com.ecommerce.anshul = DEBUG
+
+frontend.url = http://localhost:5173/
+image.base.url = http://localhost:8080/images
