stripe and payment intent added, configured controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.ecom.app.jwtCookieName = springBootEcom
 
 frontend.url = http://localhost:5173/
 image.base.url = http://localhost:8080/images
+
+#STRIPE Key
+stripe.secret.key=${STRIPE_SECRET_KEY}
